--- a/style52.css
+++ b/style52.css
@@ -109,13 +109,15 @@ nav {
     margin: 0 20px;
     border-radius: 20px;
     cursor: pointer;
+    text-decoration: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .nav-button:hover {
-    background-color: #555;
-    transform: scale(1.1);
+    background-color: #45a049;
+    transform: scale(1.1); /* Увеличивает кнопку на 10% */
 }
+
 
 /* Products Section */
 .products {
